--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -50,6 +50,7 @@ ol {
 }
 
 a {
+    display: block;
     text-decoration: none;
     color: #000;
 }
@@ -77,7 +78,7 @@ table {
 }
 
 html {
-    font-size: 16px;
     font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
     background-color: #ffffff;
+    font-size: 16px;
 }
