update font margin padding

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
 
+html {
+    font-size: 16px;
+}
+
 .wrap {
     width: 72%;
     height: 100%;
@@ -47,6 +51,7 @@
 .gap_line::after {
     content: '';
     width: 8vw;
+    min-width: 100px;
     height: 1px;
     background-color: #999;
     position: absolute;
@@ -67,6 +72,10 @@
 
 /* 媒体查询 */
 @media (max-width: 750px) {
+    html {
+        font-size: 14px;
+    }
+
     .wrap {
         width: 96%;
     }
