--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,17 @@
 @import './base.css';
 
+html,
+body,
+#app {
+    height: 100%;
+}
+
 html {
     font-size: 16px;
+}
+
+#page_container {
+    min-height: calc(100% - 150px);
 }
 
 .wrap {
